# ppois

RR/my-ostis-system/: CMakeLists.txt  build_start.sh  conanfile.txt  package-lock.json
RR/my-ostis-system/kb.bin/: string_offsets_link_hashes.scdb  strings1.scdb  term_string_offsets.scdb
RR/my-ostis-system/knowledge-base/: repo.path
RR/my-ostis-system/knowledge-base/pcb_component_placement_system/: subject_domain_of_pcb_component_placement.scs
RR/my-ostis-system/knowledge-base/pcb_component_placement_system/actions/: action_find_optimal_component_layout.scs
RR/my-ostis-system/knowledge-base/pcb_component_placement_system/concepts/classes/: concept_electrical_connection.scs  concept_electronic_component.scs  concept_layout_constraint.scs  concept_optimal_layout.scs
RR/my-ostis-system/knowledge-base/pcb_component_placement_system/concepts/relations/: nrel_connected_to.scs  nrel_has_constraint.scs  nrel_in_optimal_layout.scs
RR/my-ostis-system/knowledge-base/pcb_component_placement_system/entities/: pcb_system.scs
RR/my-ostis-system/knowledge-base/pcb_component_placement_system/entities/components/: component_C1.scs  component_C2.scs  component_C3.scs  component_C4.scs  component_C5.scs  component_C6.scs  component_R1.scs  component_R10.scs  component_R11.scs  component_R12.scs  component_R2.scs  component_R3.scs  component_R4.scs  component_R5.scs  component_R6.scs  component_R7.scs  component_R8.scs  component_R9.scs  component_U1.scs  component_U2.scs  component_U3.scs  component_U4.scs  component_U5.scs  component_U6.scs  component_U7.scs  component_U8.scs  component_U9.scs
RR/my-ostis-system/knowledge-base/pcb_component_placement_system/entities/connections/: connection_address_bus_1.scs  connection_address_bus_2.scs  connection_buffer_1.scs  connection_clock_1.scs  connection_data_bus_1.scs  connection_data_bus_2.scs  connection_debug_1.scs  connection_filter_1.scs  connection_power_1.scs  connection_power_2.scs  connection_power_caps_1.scs  connection_pullup_1.scs  connection_reset_1.scs  connection_sd_bus_1.scs  connection_spare_1.scs
RR/my-ostis-system/knowledge-base/pcb_component_placement_system/entities/constraints/: constraint_em_shielding.scs  constraint_max_length_15mm.scs  constraint_min_distance_0_5mm.scs  constraint_min_distance_5mm.scs  constraint_thermal_U1.scs  constraint_track_spacing_0_2mm.scs  constraint_track_width_0_2mm.scs  constraint_via_diameter_0_3mm.scs
RR/my-ostis-system/problem-solver/: CMakeLists.txt
RR/my-ostis-system/problem-solver/pcb-layout-module/: CMakeLists.txt  pcb_layout_module.cpp  pcb_layout_module.h
RR/my-ostis-system/problem-solver/pcb-layout-module/agent/: find_optimal_layout_agent.cpp  find_optimal_layout_agent.hpp
RR/my-ostis-system/problem-solver/pcb-layout-module/keynodes/: pcb_layout_keynodes.hpp
RR/my-ostis-system/problem-solver/pcb-layout-module/test/: find_optimal_layout_tests.cpp
RR/my-ostis-system/repo/: strings1.scdb
RR/my-ostis-system/sc-machine/lib/cmake/sc-machine/: privateTargets-release.cmake  privateTargets.cmake  sc-machine-config-version.cmake  sc-machine-config.cmake  sc-machineTargets-release.cmake  sc-machineTargets.cmake
labs/: .gitignore
labs/lab_1/Sets/: CMakeLists.txt
labs/lab_1/Sets/include/: Sets.hpp
labs/lab_1/Sets/src/: Sets.cpp  main.cpp
labs/lab_1/Sets/test/: test.cpp
labs/lab_3/TravelBooking/: CMakeLists.txt
labs/lab_3/TravelBooking/app/: main.cpp
labs/lab_3/TravelBooking/app/src/: main.cpp
labs/lab_3/TravelBooking/include/exceptions/: exceptions.hpp
labs/lab_3/TravelBooking/include/utils/: DateTime.hpp
labs/lab_3/TravelBooking/modules/accommodation/cpp/: Apartment.cpp  Camping.cpp  Hotel.cpp  Resort.cpp  Villa.cpp
labs/lab_3/TravelBooking/modules/accommodation/hpp/: Apartment.hpp  MountainLodge.hpp
labs/lab_3/TravelBooking/modules/accommodation/include/: Accommodation.hpp  Apartment.hpp  BoutiqueHotel.hpp  Camping.hpp  CruiseCabin.hpp  GuestHouse.hpp  Hostel.hpp  Hotel.hpp  MountainLodge.hpp  Resort.hpp  Villa.hpp
labs/lab_3/TravelBooking/modules/accommodation/src/: Accomodation.cpp  Apartment.cpp  BoutiqueHotel.cpp  Camping.cpp  CruiseCabin.cpp  GuestHouse.cpp  Hostel.cpp  Hotel.cpp  MountainLodge.cpp  Resort.cpp  Villa.cpp
labs/lab_3/TravelBooking/modules/booking/cpp/: Booking.cpp  BookingFilter.cpp
labs/lab_3/TravelBooking/modules/booking/include/: Booking.hpp  BookingFilter.hpp  BookingManager.hpp  BookingNotification.hpp  Invoice.hpp  Payment.hpp
labs/lab_3/TravelBooking/modules/booking/src/: Booking.cpp  BookingManager.cpp  BookingNotification.cpp  Invoice.cpp  Payment.cpp
labs/lab_3/TravelBooking/modules/configs/: AccommodationConfig.hpp  BookingConfig.hpp  MealConfig.hpp  PersonsConfig.hpp  ToursConfig.hpp  TransportConfig.hpp
labs/lab_3/TravelBooking/modules/exceptions/: TravelBookingExceptions.hpp
labs/lab_3/TravelBooking/modules/meal/cpp/: AllInclusiveMeal.cpp  Meal.cpp
labs/lab_3/TravelBooking/modules/meal/hpp/: Meal.hpp  TastingMenu.hpp
labs/lab_3/TravelBooking/modules/meal/include/: AllInclusiveMeal.hpp  BarbecueMeal.hpp  BreakfastBuffet.hpp  DietarySpecificMeal.hpp  EthnicDinner.hpp  EventCatering.hpp  FixedMenuDinner.hpp  Meal.hpp  PicnicLunch.hpp  TastingMenu.hpp
labs/lab_3/TravelBooking/modules/meal/src/: BarbecueMeal.cpp  BreakfastBuffet.cpp  EthnicDinner.cpp  EventCatering.cpp  Meal.cpp  PicnicLunch.cpp  TastingMenu.cpp
labs/lab_3/TravelBooking/modules/utils/: Utils.hpp
labs/lab_3/TravelBooking/tests/: AccommodationTest.cpp  BookingTest.cpp  MealTest.cpp  PersonsTest.cpp  TourTest.cpp  TransportationTest.cpp
labs/lab_3/TravelBooking/tests/utils/: DateTime.hpp
labs/lab_4/Sorts/: CMakeLists.txt
labs/lab_4/Sorts/app/: main.cpp
labs/lab_4/Sorts/src/BinaryTreeSort/: BinaryTreeSort.cpp
labs/lab_4/Sorts/src/MSDRadixSort/: MSDRadixSort.cpp
(+226 files in other folders)
